[package]
name = "emerald-rocksdb"
description = "Rust wrapper for Facebook's RocksDB embeddable database used in Emerald project"
version = "2.8.2"
authors = ["https://www.etcdevteam.com/contact.html"]
license = "Apache-2.0"
keywords = ["database", "embedded", "LSM-tree", "persistence"]
homepage = "https://github.com/r8d8/emerald-rocksdb"
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "test/**/*",
]

[features]
default = []
valgrind = []

[dependencies]
libc = "0.2"
local-encoding = "0.2.0"
librocksdb-sys = { path = "librocksdb-sys", version = "5.10.2" }
